--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 aws-requests-auth>=0.3.0
 blist>=1.3.6
 boto3>=1.4.4
+boto==2.34.0
+botocore==1.4.5
 configparser>=3.5.0
 croniter>=0.3.16
 elasticsearch
