fix for dh_strip breakage with wheels

--- a/debian/Dockerfile
+++ b/debian/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:16.04
 
 RUN apt-get update && apt-get upgrade -y
-RUN apt-get -y install python-setuptools python2.7 git tox dh-virtualenv dpkg-dev debhelper libssl-dev python-dev
+RUN apt-get -y install python-setuptools python2.7 git tox dh-virtualenv dpkg-dev debhelper libssl-dev python-dev libffi-dev
 
 RUN easy_install pip
 
