--- a/debian/rules
+++ b/debian/rules
@@ -1,4 +1,6 @@
 #!/usr/bin/make -f
+override_dh_virtualenv:
+	dh_virtualenv --extra-pip-arg='--no-binary' --extra-pip-arg=':all:'
 
 %:
 	dh $@ --with python-virtualenv
